@@ -1,5 +1,10 @@
 2008-07-18  Tobias C. Rittweiler  <tcr@freebits.de>
 
+	* slime.el (slime-recompile-locations): Locations were potentially
+	recompiled within a wrong package. Fix that.
+
+2008-07-18  Tobias C. Rittweiler  <tcr@freebits.de>
+
 	An explicit numeric value as prefix-arg given to `C-c C-c' will
 	now represent the debug level the defun is compiled with;
 	`C-u C-c C-c' defaults to maximum debug like before. (Now also
